--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "alt-react",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Connect flux to react",
   "main": "lib/index.js",
   "scripts": {
     "build": "npm run clean && npm run transpile",
     "clean": "rimraf lib",
     "pretest": "npm run clean && npm run transpile",
-    "test": "mocha -u exports -R nyan --require ./test/babel test",
-    "transpile": "babel src --out-dir lib --stage 0"
+    "test": "mocha --debug-brk -u exports -R nyan --compilers js:babel-core/register",
+    "transpile": "babel src --plugins transform-class-properties --out-dir lib"
   },
   "repository": {
     "type": "git",
@@ -32,16 +32,21 @@
   },
   "homepage": "https://github.com/altjs/react",
   "devDependencies": {
-    "alt": "0.17.4",
-    "babel": "5.8.23",
-    "babel-core": "5.8.25",
-    "chai": "3.3.0",
-    "jsdom": "7.0.1",
-    "mocha": "2.3.3",
-    "react": "0.14.0",
-    "react-addons-test-utils": "0.14.0",
-    "react-dom": "0.14.0",
-    "rimraf": "2.4.3",
-    "sinon": "1.17.1"
+    "alt": "0.18.6",
+    "babel-cli": "6.26.0",
+    "babel-core": "6.26.0",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "chai": "4.1.2",
+    "jsdom": "11.2.0",
+    "mocha": "3.5.2",
+    "prop-types": "^15.5.10",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "rimraf": "2.6.1",
+    "sinon": "3.2.1"
   }
 }
