--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-addons-test-utils": "0.14.0",
     "react-dom": "0.14.0",
     "rimraf": "2.4.3",
-    "sinon": "1.17.1"
+    "sinon": "1.17.1",
+    "prop-types": "^15.5.10"   
   }
 }
